--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,27 @@
     <string name="app_name">FYP Project</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string-array name="university">
+        <item>Nottingham Trent University</item>
+    </string-array>
+
+    <string-array name="courseYr">
+        <item>1st</item>
+        <item>2nd</item>
+        <item>Placement</item>
+        <item>3rd</item>
+    </string-array>
+
+
+    <string-array name="hobbies">
+        <item>FIFA</item>
+        <item>Clubbing</item>
+        <item>Drinking</item>
+        <item>Gaming</item>
+        <item>Festivals</item>
+        <item>Raves</item>
+        <item>Netflix</item>
+    </string-array>
 </resources>
